Fixed inconsistent naming of the library

--- a/sofa/pom.xml
+++ b/sofa/pom.xml
@@ -21,21 +21,21 @@
 		
 		<dependency>
 			<groupId>be.angelcorp</groupId>
-			<artifactId>sofaj-platform</artifactId>
+			<artifactId>sofa-platform</artifactId>
 			<version>1.0</version>
 			<classifier>natives-windows</classifier>
             <optional>true</optional>
 		</dependency>
         <dependency>
             <groupId>be.angelcorp</groupId>
-            <artifactId>sofaj-platform</artifactId>
+            <artifactId>sofa-platform</artifactId>
             <version>1.0</version>
 			<classifier>natives-linux</classifier>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
             <groupId>be.angelcorp</groupId>
-            <artifactId>sofaj-platform</artifactId>
+            <artifactId>sofa-platform</artifactId>
             <version>1.0</version>
 			<classifier>natives-freebsd</classifier>
 			<optional>true</optional>
