--- a/sofa-platform/pom.xml
+++ b/sofa-platform/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	
-	<artifactId>sofaj-platform</artifactId>
+	<artifactId>sofa-platform</artifactId>
     <version>1.0</version>
     <name>Sofa dynamic library</name>
 	
