--- a/sofa-platform/pom.xml
+++ b/sofa-platform/pom.xml
@@ -12,23 +12,14 @@
     <version>1.0</version>
     <name>Sofa dynamic library</name>
 	
-	<dependencies>
-		<dependency>
-			<groupId>com.nativelibs4java</groupId>
-			<artifactId>bridj</artifactId>
-			<version>0.7-SNAPSHOT</version>
-		</dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-	</dependencies>
-
+    <properties>
+        <skipBuild>false</skipBuild>
+    </properties>
+    
     <build>
         <plugins>
 			<plugin>
+                <!-- Add '-DskipBuild=true' to the command line to skip the build automated process -->
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.2.1</version>
@@ -47,22 +38,7 @@
 						<argument>-x</argument>
 						<argument>${basedir}/src/main/cpp/build.sh</argument>
 					</arguments>
-				</configuration>
-			</plugin>
-            <plugin>
-				<groupId>com.nativelibs4java</groupId>
-				<artifactId>maven-jnaerator-plugin</artifactId>
-				<version>0.12-SNAPSHOT</version>
-				<executions>
-					<execution>
-						<phase>process-sources</phase>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<javaOutputDirectory>target/generated</javaOutputDirectory>
+                    <skip>${skipBuild}</skip>
 				</configuration>
 			</plugin>
            <plugin>
@@ -108,56 +84,5 @@
             </plugin>
 		</plugins>
 	</build>
-	
-	<profiles>
-        <profile>
-            <id>windows</id>
-            <activation>
-                <os><family>windows</family></os>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-jar-plugin</artifactId>
-                        <configuration>
-                            <classifier>natives-windows</classifier>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>linux</id>
-            <activation>
-                <os><name>linux</name></os>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-jar-plugin</artifactId>
-                        <configuration>
-                            <classifier>natives-linux</classifier>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-		<profile>
-            <id>freebsd</id>
-            <activation>
-                <os><name>freebsd</name></os>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-jar-plugin</artifactId>
-                        <configuration>
-                            <classifier>natives-freebsd</classifier>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 	
 </project>
