--- a/sofa/pom.xml
+++ b/sofa/pom.xml
@@ -5,11 +5,10 @@
 	<parent>
 		<groupId>be.angelcorp</groupId>
 		<artifactId>sofa-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>sofa</artifactId>
-    <version>1.0</version>
     <name>Java bindings to the SOFA library</name>
 	
 	<dependencies>
@@ -22,7 +21,7 @@
 		<dependency>
 			<groupId>be.angelcorp</groupId>
 			<artifactId>sofa-platform</artifactId>
-			<version>1.0</version>
+			<version>${project.version}</version>
 		</dependency>
 
         <dependency>
