--- a/sofa/pom.xml
+++ b/sofa/pom.xml
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>com.nativelibs4java</groupId>
 			<artifactId>bridj</artifactId>
-			<version>0.7-SNAPSHOT</version>
+			<version>0.7.0</version>
 		</dependency>
 		
 		<dependency>
